--- a/src/app/features/gis/components/policy/components/underwriting/underwriting.component.html
+++ b/src/app/features/gis/components/policy/components/underwriting/underwriting.component.html
@@ -32,7 +32,9 @@
 
                 <div class="mt-3" *ngIf="selectedOption === 'new-business'">
                     <!-- New Business Content -->
-                    <p class="questions-text"> {{'gis.policy.is_the_policy_short_period' | translate}}?</p>
+                    <form [formGroup]="newBusinessForm">
+
+                    <p class="questions-text"> {{'gis.policy.is_the_policy_short_period' | translate}}</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
                             <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault5">
@@ -57,15 +59,17 @@
                     </div>
                     <p class="mt-4 questions-text">{{'gis.policy.is_it_a_new_client' | translate}}?</p>
                     <div class="d-flex ">
-                        <div class="form-check  me-3">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault9" id="flexRadioDefault9">
-                            <label class="form-check-label" for="flexRadioDefault5">{{'gis.policy.yes' | translate}} </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault9" id="flexRadioDefault10">
-                            <label class="form-check-label" for="flexRadioDefault6">{{'gis.policy.no' | translate}} </label>
-                        </div>
+                        <div class="form-check me-3">
+                            <input class="form-check-input" type="radio" name="isClientNew" id="flexRadioDefault9" formControlName="isClientNew" [value]="true">
+                            <label class="form-check-label" for="flexRadioDefault9">{{ 'gis.policy.yes' | translate }}</label>
+                          </div>
+                        
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="isClientNew" id="flexRadioDefault10" formControlName="isClientNew" [value]="false">
+                            <label class="form-check-label" for="flexRadioDefault10">{{ 'gis.policy.no' | translate }}</label>
+                          </div>
                     </div>
+                </form>
                 </div>
 
                 <div class="mt-2" *ngIf="selectedOption === 'endorsement'">
@@ -87,7 +91,7 @@
         </div>
         <div class="d-flex justify-content-end">
             <button type="button" class="btn btn-outline-primary me-2">{{'gis.policy.cancel' | translate}}</button>
-            <button type="button" class="btn btn-primary">{{'gis.policy.next' | translate}}</button>
+            <button type="button" class="btn btn-primary" (click)="onNextClick()">{{'gis.policy.next' | translate}}</button>
         </div>
 
     </div>
