--- a/src/app/features/lms/grp/components/quotation/components/client-creation/client-creation.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/client-creation/client-creation.component.css
@@ -90,20 +90,27 @@ p-multiSelect {
     color: #00529B;
   }
 
-  .custom-red-button {
+  /* CSS for X button, to close modal */
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.custom-red-button {
     color: transparent;
     background-color: transparent;
     border: none;
-  }
-  
-  .custom-red-button::before {
+}
+
+.custom-red-button::before {
     content: "X";
     color: #EE3945;
     width: 20px;
     height: 20px;
     flex-shrink: 0;
-    
-  }
+}
+/* End of CSS for X button, to close modal */
 
   .finish-button {
     display: inline-flex;
@@ -154,6 +161,38 @@ label {
 
 .row-spacing {
   padding-top: 30px;
+}
+
+.action-column {
+  width: 4px;
+  text-align: center;
+}
+
+.button-container {
+  display: inline-block;
+}
+
+.hover-button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.hover-button:hover {
+  background-color: #b8bbb9;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
 
 
