--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
@@ -1,6 +1,6 @@
 <div class="container">  
   <div class="row">
-    <div class="col-12">
+    <div class="col-12" (click)="retrievQuoteDets()">
       <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
     </div>
   </div>
