VQ-1711: New quote button addition on top of the quotation listing table

--- a/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
+++ b/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
@@ -100,7 +100,14 @@
     </div>
   </p-tabPanel>
   <p-tabPanel header="Group Life">
-    <p>Life Group</p>
+    <div>      
+      <div class="row">            
+          <div class="d-flex justify-content-end">
+            <button style="font-size: 12px; padding: 0.5em 1em;" type="button" class="btn btn-sm btn-primary" [routerLink]="'/home/lms/grp/quotation/client'">New quote</button>
+                          
+          </div>
+      </div>           
+    </div>
   </p-tabPanel>
   <p-tabPanel header="General">
     <p>General</p>
